--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "gptrakkme",
-  "version": "1.0.0",
-  "description": "A single page webapp for GPX visualization",
-  "main": "dist/bundle.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sehaas/gptrakkme.git"
-  },
-  "keywords": [
-    "gpx",
-    "visualization",
-    "track",
-    "heartrate",
-    "elevation"
-  ],
-  "author": "Sebastian Haas",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sehaas/gptrakkme/issues"
-  },
-  "homepage": "https://github.com/sehaas/gptrakkme#readme",
-  "devDependencies": {
-    "webpack": "^3.4.1"
-  }
+	"name": "gptrakkme",
+	"version": "1.0.0",
+	"description": "A single page webapp for GPX visualization",
+	"main": "dist/bundle.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/sehaas/gptrakkme.git"
+	},
+	"keywords": [
+		"gpx",
+		"visualization",
+		"track",
+		"heartrate",
+		"elevation"
+	],
+	"author": "Sebastian Haas",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/sehaas/gptrakkme/issues"
+	},
+	"homepage": "https://github.com/sehaas/gptrakkme#readme",
+	"devDependencies": {
+		"clean-webpack-plugin": "^0.1.16",
+		"html-webpack-plugin": "^2.30.1",
+		"webpack": "^3.4.1"
+    }
 }
