--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "dist/bundle.js",
 	"scripts": {
 		"build": "webpack",
+		"build:dist": "NODE_ENV=production webpack -p",
 		"watch": "webpack --watch",
 		"start": "webpack-dev-server --open"
 	},
@@ -27,8 +28,19 @@
 	"homepage": "https://github.com/sehaas/gptrakkme#readme",
 	"devDependencies": {
 		"clean-webpack-plugin": "^0.1.16",
+		"copy-webpack-plugin": "^4.0.1",
+		"css-loader": "^0.28.4",
+		"file-loader": "^0.11.2",
 		"html-webpack-plugin": "^2.30.1",
+		"style-loader": "^0.18.2",
 		"webpack": "^3.4.1",
 		"webpack-dev-server": "^2.6.1"
+	},
+	"dependencies": {
+		"@mapbox/togeojson": "^0.16.0",
+		"d3": "^4.10.0",
+		"leaflet": "^1.1.0",
+		"leaflet-easybutton": "^2.2.0",
+		"leaflet-fullscreen": "^1.0.2"
 	}
 }
