--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	},
 	"dependencies": {
 		"@mapbox/togeojson": "^0.16.0",
+		"coordist": "0.0.2",
 		"d3": "^4.10.0",
 		"leaflet": "^1.1.0",
 		"leaflet-easybutton": "^2.2.0",
