--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"d3": "^4.10.0",
 		"leaflet": "^1.1.0",
 		"leaflet-easybutton": "^2.2.0",
-		"leaflet-fullscreen": "^1.0.2"
+		"leaflet-fullscreen": "^1.0.2",
+		"navigo": "^5.3.0"
 	}
 }
