--- a/package.json
+++ b/package.json
@@ -29,20 +29,22 @@
 	"devDependencies": {
 		"clean-webpack-plugin": "^0.1.16",
 		"copy-webpack-plugin": "^4.0.1",
-		"css-loader": "^0.28.4",
+		"css-loader": "^0.28.7",
 		"file-loader": "^0.11.2",
 		"html-webpack-plugin": "^2.30.1",
 		"style-loader": "^0.18.2",
-		"webpack": "^3.4.1",
-		"webpack-dev-server": "^2.6.1"
+		"svg-inline-loader": "^0.8.0",
+		"webpack": "^3.5.6",
+		"webpack-dev-server": "^2.7.1"
 	},
 	"dependencies": {
-		"@mapbox/togeojson": "^0.16.0",
+		"@mapbox/togeojson": "github:sehaas/togeojson#fix_missing_hr",
 		"coordist": "0.0.2",
-		"d3": "^4.10.0",
-		"leaflet": "^1.1.0",
-		"leaflet-easybutton": "^2.2.0",
+		"d3": "^4.10.2",
+		"leaflet": "^1.2.0",
+		"leaflet-easybutton": "^2.2.2",
 		"leaflet-fullscreen": "^1.0.2",
-		"navigo": "^5.3.0"
+		"navigo": "^5.3.1",
+		"standard-deviation-stream": "0.0.3"
 	}
 }
