--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@mapbox/togeojson": "github:sehaas/togeojson#fix_missing_hr",
 		"coordist": "0.0.2",
 		"d3": "^4.10.2",
+		"d3-axis": "^1.0.8",
 		"leaflet": "^1.2.0",
 		"leaflet-easybutton": "^2.2.2",
 		"leaflet-fullscreen": "^1.0.2",
