--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"description": "A single page webapp for GPX visualization",
 	"main": "dist/bundle.js",
 	"scripts": {
-		"build": "webpack",
-		"build:dist": "NODE_ENV=production webpack -p",
+		"build": "webpack --mode=development",
+		"build:dist": "webpack --mode=production -p",
 		"watch": "webpack --watch",
-		"start": "SKIP_CLEAN=true webpack-dev-server --open"
+		"start": "SKIP_CLEAN=true webpack-dev-server --mode=development --open"
 	},
 	"repository": {
 		"type": "git",
@@ -27,25 +27,27 @@
 	},
 	"homepage": "https://github.com/sehaas/gptrakkme#readme",
 	"devDependencies": {
-		"clean-webpack-plugin": "^0.1.19",
-		"copy-webpack-plugin": "^4.5.2",
-		"css-loader": "^0.28.11",
-		"file-loader": "^0.11.2",
-		"html-webpack-plugin": "^2.30.1",
-		"style-loader": "^0.18.2",
+		"@babel/core": "^7.1.6",
+		"babel-loader": "^8.0.4",
+		"clean-webpack-plugin": "^1.0.0",
+		"copy-webpack-plugin": "^4.6.0",
+		"css-loader": "^1.0.1",
+		"file-loader": "^2.0.0",
+		"html-webpack-plugin": "^3.2.0",
+		"style-loader": "^0.23.1",
 		"svg-inline-loader": "^0.8.0",
-		"webpack": "^3.12.0",
-		"webpack-dev-server": "^2.11.3"
+		"webpack": "^4.26.1",
+		"webpack-cli": "^3.1.2",
+		"webpack-dev-server": "^3.1.10"
 	},
 	"dependencies": {
 		"@mapbox/togeojson": "github:sehaas/togeojson#fix_missing_hr",
 		"coordist": "0.0.2",
-		"d3": "^4.13.0",
-		"d3-axis": "^1.0.12",
+		"d3": "^5.7.0",
 		"leaflet": "^1.3.4",
 		"leaflet-easybutton": "^2.3.0",
 		"leaflet-fullscreen": "^1.0.2",
-		"navigo": "^5.3.3",
+		"navigo": "^7.1.2",
 		"standard-deviation-stream": "0.0.3"
 	}
 }
