--- a/package.json
+++ b/package.json
@@ -27,27 +27,28 @@
 	},
 	"homepage": "https://github.com/sehaas/gptrakkme#readme",
 	"devDependencies": {
-		"@babel/core": "^7.5.5",
-		"babel-loader": "^8.0.4",
-		"clean-webpack-plugin": "^1.0.0",
-		"copy-webpack-plugin": "^5.1.1",
-		"css-loader": "^1.0.1",
-		"file-loader": "^2.0.0",
-		"html-webpack-plugin": "^3.2.0",
-		"style-loader": "^0.23.1",
-		"svg-inline-loader": "^0.8.0",
-		"webpack": "^4.26.1",
-		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.14"
+		"@babel/core": "^7.15.8",
+		"babel-loader": "^8.2.2",
+		"clean-webpack-plugin": "^4.0.0",
+		"copy-webpack-plugin": "^9.0.1",
+		"css-loader": "^6.4.0",
+		"html-webpack-plugin": "^5.4.0",
+		"style-loader": "^3.3.0",
+		"svg-inline-loader": "^0.8.2",
+		"webpack": "^5.58.2",
+		"webpack-cli": "^4.9.0",
+		"webpack-dev-server": "^4.3.1"
 	},
 	"dependencies": {
 		"@mapbox/togeojson": "github:sehaas/togeojson#fix_missing_hr",
-		"coordist": "0.0.2",
-		"d3": "^5.7.0",
-		"leaflet": "^1.3.4",
-		"leaflet-easybutton": "^2.3.0",
+		"coordist": "^0.0.2",
+		"d3": "^7.1.1",
+		"leaflet": "^1.7.1",
+		"leaflet-easybutton": "^2.4.0",
 		"leaflet-fullscreen": "^1.0.2",
-		"navigo": "^7.1.2",
-		"standard-deviation-stream": "0.0.3"
+		"minimist": "^1.2.5",
+		"navigo": "^8.11.1",
+		"standard-deviation-stream": "^0.0.3",
+		"xmldom": "^0.6.0"
 	}
 }
